--- a/folder2/divcontainerel.html
+++ b/folder2/divcontainerel.html
@@ -12,13 +12,16 @@
     
     </head>
     <body>
+        
         <div class="bgstyle">
         <h1 class="heading">Tourism</h1>
         <p class="p1">paragraph elemnt</p>
         <button class="btn1">clickme</button>
         </div>
         <div class="con2">
+            <a href="C:\Users\ppandrakula\OneDrive - ALLEGIS GROUP\Desktop\HTML-CSSBASCISANDPRJECTS\folder1\html1.html" target="_blank">
             <button class="btn btn-primary">CLICK</button>
+            </a>
             <button class="btn btn-secondary">CLICK</button>
             <button class="btn btn-success">CLICK</button>
             <button class="btn btn-danger">CLICK</button>
@@ -49,5 +52,7 @@
         <div class="bg-success">
             <p>TOURISM</p>
         </div>
+        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/tajmahal-img.png" 
+        class="image"/>
 
     </html>
