--- a/codingpractice3-codingCoverPage/cdingpractice4-FoodOrderPage/cp4.html
+++ b/codingpractice3-codingCoverPage/cdingpractice4-FoodOrderPage/cp4.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet " href="html1.css">
+        <link rel="stylesheet " href="cp4.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -9,13 +9,11 @@
     </head>
     <body>
         <div class="container d-flex flex-column justify-content-end">
-            <div class="card">
-                <h1 class="main-heading">Tourism</h1>
-                <p class="paragraph">Plan A Trip</p>
-                <div class="btn-text">
-                <button class="button">clickme</button>
-                </div>
-                
+            <div class="card bg-success">
+                <h1 class="title">Happy Meals</h1>
+                <p class="desc">Discover the best foods over the 1,000 restaurents</p>
+                <button class="btn btn-light btn-styles">Book Now</button>
             </div>
         </div>
-    </html>
+    </body>
+</html>
